# tonemaker

./: .gitignore  LICENSE  README.md  build_artist_presets.py  harvest_models.py  models.json  pgp_tool.py  podgo.py  pyproject.toml
.claude-flow/data/: pending-insights.jsonl
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
claude-project/: SETUP.md  project-instructions.md
claude-project/knowledge/: blocks.json  example-4snapshot.json  example-simple.json  models.json
docs/: index.html  tone-guide.md
examples/: Ambient Shimmer.pgp  Architects.pgp  Blues Breakup.pgp  Bring Me The Horizon.pgp  Classic Crunch.pgp  Deftones.pgp  Loathe Fangs.pgp  Modern High Gain.pgp  Sleep Token.pgp  Sparkle Clean.pgp
presets/: Architects.pgp  Bring Me The Horizon.pgp  Deftones.pgp  Loathe Fangs.pgp  Loathe.pgp  Sleep Token.pgp
reference/: Test.pgp  cal-brit.pgp  cal-pv.pgp  logic.pgp
scripts/: build_library.py  build_web.py  generate_library.py
specs/001-podgo-tone-builder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-podgo-tone-builder/checklists/: requirements.md
specs/001-podgo-tone-builder/contracts/: cli-commands.md  tone-spec.schema.json
src/podgo/: __init__.py  _resources.py  build.py  cli.py  context.py  harvest.py
src/podgo/data/: blocks.json
src/podgo/data/knowledge/: PODGO_LLM_CONTEXT.md
src/tonemaker/: __init__.py  _resources.py  build.py  cli.py  context.py  validate.py
src/tonemaker/data/knowledge/: TONEMAKER_LLM_CONTEXT.md  schema.json
src/tonemaker/data/templates/: metal-4snapshot.json
tests/: test_build.py  test_context.py  test_roundtrip.py  test_validate.py
web/: core.js  library.json  template.html
