[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podgo-tones"
version = "0.1.0"
description = "Edit Line 6 POD Go .pgp presets as data, drivable by any LLM. Unofficial."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sean Casey" }]
keywords = ["pod-go", "line6", "guitar", "tone", "preset", "pgp", "helix", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/SeannyQuest/podgo-tones"
Issues = "https://github.com/SeannyQuest/podgo-tones/issues"

[project.scripts]
podgo = "podgo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/podgo"]

[tool.hatch.build.targets.sdist]
include = ["src/podgo", "examples", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
