[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tonemaker"
version = "0.1.0"
description = "Edit Line 6 POD Go .pgp presets as data, drivable by any LLM. Unofficial."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sean Casey" }]
keywords = ["pod-go", "line6", "guitar", "tone", "preset", "pgp", "helix", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/SeannyQuest/tonemaker"
Issues = "https://github.com/SeannyQuest/tonemaker/issues"

[project.scripts]
tonemaker = "tonemaker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tonemaker"]

[tool.hatch.build.targets.sdist]
include = ["src/tonemaker", "examples", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
